--- a/panel.html
+++ b/panel.html
@@ -18,6 +18,11 @@
                     <button id="regex-toggle" class="regex-toggle" title="Toggle Regex Mode (enable to use regex patterns)">
                         <span class="regex-icon">/regex/</span>
                     </button>
+                    <button id="clear-all-btn" class="icon-btn" title="Clear All Requests" style="margin-left: 4px;">
+                        <svg viewBox="0 0 24 24" width="14" height="14">
+                            <path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z" fill="currentColor"/>
+                        </svg>
+                    </button>
                 </div>
                 <div class="filters">
                     <button class="filter-btn active" data-filter="all">All</button>
