--- a/panel.html
+++ b/panel.html
@@ -637,6 +637,55 @@
         </div>
     </div>
 
+    <!-- Screenshot Editor Modal -->
+    <div id="screenshot-editor-modal" class="modal">
+        <div class="modal-content screenshot-editor-modal">
+            <div class="modal-header">
+                <h3>Screenshot Editor</h3>
+                <button class="close-modal" id="screenshot-editor-close">&times;</button>
+            </div>
+            <div class="modal-body screenshot-editor-body">
+                <div class="screenshot-tools">
+                    <button id="screenshot-tool-highlight" class="secondary-btn active" title="Highlight">
+                        <svg viewBox="0 0 24 24" width="16" height="16">
+                            <path d="M3 17.25L17.81 2.44l3.75 3.75L6.75 21H3v-3.75z" fill="#FFD54F" />
+                            <path d="M5 19h2.25L17 9.25 14.75 7 5 16.75V19z" fill="#FBC02D" />
+                        </svg>
+                    </button>
+                    <button id="screenshot-tool-redact" class="secondary-btn" title="Redact">
+                        <svg viewBox="0 0 24 24" width="16" height="16">
+                            <rect x="3" y="7" width="18" height="10" fill="currentColor" />
+                        </svg>
+                    </button>
+                    <button id="screenshot-tool-undo" class="secondary-btn" title="Undo">
+                        <svg viewBox="0 0 24 24" width="16" height="16">
+                            <path d="M12 5V1L7 6l5 5V7c3.31 0 6 2.69 6 6 0 1.01-.25 1.96-.7 2.8l1.46 1.46A7.932 7.932 0 0020 13c0-4.42-3.58-8-8-8z"
+                                fill="currentColor" />
+                        </svg>
+                    </button>
+                    <button id="screenshot-tool-redo" class="secondary-btn" title="Redo">
+                        <svg viewBox="0 0 24 24" width="16" height="16">
+                            <path d="M12 5V1l5 5-5 5V7c-3.31 0-6 2.69-6 6 0 1.01.25 1.96.7 2.8L5.24 17.26A7.932 7.932 0 014 13c0-4.42 3.58-8 8-8z"
+                                fill="currentColor" />
+                        </svg>
+                    </button>
+                    <div class="screenshot-zoom-controls">
+                        <span class="zoom-label">Zoom:</span>
+                        <button id="screenshot-zoom-out" class="secondary-btn">-</button>
+                        <span id="screenshot-zoom-value" class="zoom-value">100%</span>
+                        <button id="screenshot-zoom-in" class="secondary-btn">+</button>
+                    </div>
+                </div>
+                <div class="screenshot-canvas-wrapper">
+                    <canvas id="screenshot-editor-canvas"></canvas>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button id="screenshot-download-btn" class="primary-btn">Download PNG</button>
+            </div>
+        </div>
+    </div>
+
     <script src="lib/html2canvas.min.js"></script>
     <script src="lib/marked.min.js"></script>
     <script src="lib/diff.min.js"></script>
